Another minor spacing fix
SVN-Revision: 5877

--- a/default.css
+++ b/default.css
@@ -48,6 +48,7 @@ h1 img {
   padding-left:  4em;
   padding-right: 2em;
   margin-bottom: 0em;
+  margin-top:  0.5em;
 }
 
 h2,h3 {
@@ -63,7 +64,7 @@ h1 {
 }
 
 h3 {
-  padding: 0px 0px 0px 1em;
+  padding: 0.125em 0px 0px 1em;
 }
 
 ul.menu {
